# agenticProjsLandfill

./: .claude.json  .env  .env.example  .gitignore  CLAUDE.md  GRAPHITI_INTEGRATION_README.md  main.py  package-lock.json  package.json  pyproject.toml  setup.py
.gemini/: GEMINI.md  google_accounts.json  installation_id  settings.json  settings.json.orig
.idx/: dev.nix
JiraCSServer/: .env.example  API.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  test-payload.json  tsconfig.json
JiraCSServer/src/: index.ts  server.ts
JiraCSServer/src/agents/: classifier.ts  complex-handler.ts  general-handler.ts  login-handler.ts  quality-evaluator.ts
JiraCSServer/src/clients/: jira-client.ts
JiraCSServer/src/middleware/: errorHandler.ts  validation.ts
JiraCSServer/src/routes/: jira.ts
JiraCSServer/src/tests/: api-test.ts  index.ts  mock-data.ts
JiraCSServer/src/types/: index.ts
KnowledgeBase/agents/: __init__.py  agent.py  connection.py  extractor.py
KnowledgeBase/docs/: copyProject.groovy  recvOAPost.groovy  send2OA.groovy
agentic_rag_proto/agents/: query.py
agentic_rag_proto/extractor/: extractor.py
jiraCSAgent/: .env.example  .gitignore  README.md
jiraCSAgent/app/: globals.css
jiraCSAgent/components/: EmailDetailView.tsx  EmailProcessingDashboard.tsx  EmailTestForm.tsx  ServiceStatus.tsx
jiraCSAgent/prisma/: schema.prisma  seed.ts
jiraCSAgent/src/: .env  .env.example  DATABASE_SETUP.md  WORKFLOW_ORCHESTRATORS.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-orchestrator.js  test-schema.js  tsconfig.json
(+54 files in other folders)
