[project]
name = "chunk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.48.1",
    "fastapi>=0.116.1",
    "graphiti-core[google-genai]>=0.18.9",
    "langchain>=0.3.27",
    "langextract>=1.0.8",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
]